--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spraypaint",
-  "version": "0.3.2",
+  "version": "0.8.0-thecoffeefactory.1",
   "description": "Graphiti Client / Javascript ORM",
   "main": "lib/index.js",
   "module": "lib-esm/index.js",
